add multi part file size setting

--- a/cbporganizer-backend/src/main/resources/application.properties
+++ b/cbporganizer-backend/src/main/resources/application.properties
@@ -8,3 +8,6 @@ keycloak.ssl-required=external
 keycloak.confidential-port=0
 keycloak.principal-attribute=preferred_username
 origins.allowed=*
+
+spring.servlet.multipart.maxFileSize=200MB
+spring.servlet.multipart.maxRequestSize=200MB
