added docker files, fix login page

--- a/cbporganizer-backend/src/main/resources/application.properties
+++ b/cbporganizer-backend/src/main/resources/application.properties
@@ -11,3 +11,4 @@ origins.allowed=*
 
 spring.servlet.multipart.maxFileSize=200MB
 spring.servlet.multipart.maxRequestSize=200MB
+logging.level.org.springframework.security=DEBUG
