--- a/cbporganizer-frontend/package.json
+++ b/cbporganizer-frontend/package.json
@@ -13,14 +13,15 @@
     "axios": "^1.3.3",
     "dotenv": "^16.0.3",
     "keycloak-js": "^20.0.1",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.1.1",
-    "primeflex": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
